package learningapp.exceptions.base;

public class DuplicateEntityException extends LearningAppException {

    public DuplicateEntityException(String msg) {
        super(msg);
    }
}
