package learningapp.exceptions.base;

public class InvalidFormatException extends LearningAppException {

    public InvalidFormatException(String msg) {
        super(msg);
    }

}
