package learningapp.exceptions.base;

public class InvalidTransitionException extends LearningAppException {

    public InvalidTransitionException(String msg) {
        super(msg);
    }
}
