package learningapp.exceptions.base;

public class LearningAppException extends RuntimeException {

    LearningAppException(String msg) {
        super(msg);
    }
}
