package learningapp.exceptions.base;

public class NotFoundException extends LearningAppException {

    public NotFoundException(String msg) {
        super(msg);
    }
}
