@startuml

title __BASE's Class Diagram__\n

  namespace learningapp {
    namespace exceptions {
      namespace base {
        class learningapp.exceptions.base.DuplicateEntityException {
            + DuplicateEntityException()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace exceptions {
      namespace base {
        class learningapp.exceptions.base.InvalidFormatException {
            + InvalidFormatException()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace exceptions {
      namespace base {
        class learningapp.exceptions.base.InvalidTransitionException {
            + InvalidTransitionException()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace exceptions {
      namespace base {
        class learningapp.exceptions.base.LearningAppException {
            ~ LearningAppException()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace exceptions {
      namespace base {
        class learningapp.exceptions.base.NotFoundException {
            + NotFoundException()
        }
      }
    }
  }
  

  learningapp.exceptions.base.DuplicateEntityException -up-|> learningapp.exceptions.base.LearningAppException
  learningapp.exceptions.base.InvalidFormatException -up-|> learningapp.exceptions.base.LearningAppException
  learningapp.exceptions.base.InvalidTransitionException -up-|> learningapp.exceptions.base.LearningAppException
  learningapp.exceptions.base.NotFoundException -up-|> learningapp.exceptions.base.LearningAppException


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
